[project]
name = "celery-live"
version = "0.1.0"
description = "A readiness and liveness probe service for Celery"
authors = [
    {name = "James Hardy"}
]
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "celery (>=4.3.0)",
    "click",
    "importlib-metadata<5.0.0; python_version == '3.7'"
]

[project.scripts]
celery-live = "celery_live.cli:check"

[tool.poetry]
packages = [{include = "celery_live", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
